--- a/Task1.html
+++ b/Task1.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="Task1.css"/>
+        <title>Opentext</title>
     </head>
     <body>
         <header>
